fixed z-indexing issue

--- a/website/static/style.css
+++ b/website/static/style.css
@@ -5,7 +5,7 @@
     color: white;
     font-family: 'Times New Roman', Times, serif;
     position: relative;
-    z-index: 1;
+    z-index: 0;
     cursor: pointer;
     background: none;
     text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.45);
@@ -133,4 +133,5 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index:1;
 }
